--- a/src/main/resources/templates/login/loginPage.html
+++ b/src/main/resources/templates/login/loginPage.html
@@ -68,6 +68,11 @@
 
     <button type="submit">로그인</button>
   </form>
+
+  <form action="/login/changePw" method="get">
+    <button type="submit">비밀번호 변경</button>
+  </form>
+
 </div>
 </body>
 </html>
